<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/idWifiOnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceButton" />

            <Button
                android:id="@+id/idWifiOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton" />

            <Button
                android:id="@+id/idInRangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inRangeButton" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/addToQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add to Queue"/>

            <Button
                android:id="@+id/removeFromQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remove from Queue"/>

            <Button
                android:id="@+id/estimateQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estimate Queue"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>